feat: Adicionar configuração completa do Vim centralizada
- Criar script sync-vim-config.sh para sincronização automatizada
- Estruturar diretório vim/ com toda configuração do Vim
- Configurar links simbólicos ~/.vim e ~/.vimrc apontando para ~/config
- Atualizar .gitignore para excluir arquivos temporários e plugins
- Preservar estrutura de autoload, spell, undodir e vsnip
- Plugins serão baixados automaticamente pelo vim-plug

--- a/.gitignore
+++ b/.gitignore
@@ -21,4 +21,23 @@ Thumbs.db
 # Temporários do Vim
 *.swp
 *.swo
-.vim/undodir/
+*.swn
+.netrwhist
+vim/undodir/*
+vim/.netrwhist
+vim/spell/*.spl
+vim/spell/*.sug
+vim/view/
+vim/session/
+
+# Plugins do Vim (serão baixados pelo vim-plug)
+vim/plugged/
+
+# Arquivos de histórico e cache do Vim
+vim/plugged/*/.git/
+vim/plugged/*/test/
+vim/plugged/*/tests/
+vim/plugged/*/doc/tags
+
+# Backups do script de sincronização
+vim-backup-*
