feat: adiciona lazy-lock.json, remove sync-tsin, previne duplicacao
- Adiciona lazy-lock.json ao gerenciamento (reproducibilidade)
- Remove run_onchange_after_sync-tsin.sh.tmpl (desnecessario)
- Adiciona .config/nvim/lua/ ao .chezmoiignore (previne duplicacao tsin)

Ref: diagnostico-ambiente-20251226

--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -48,3 +48,9 @@ terminal
 # Vim - Diretórios gerados automaticamente
 dot_vim/plugged
 dot_vim/undodir
+
+# Neovim - Prevenir duplicacao de plugins locais
+# IMPORTANTE: tsin.nvim deve ser carregado de ~/tsin.nvim/ (via lazy dir=)
+# NAO copiar para .config/nvim/lua/ - causa conflitos de require()
+.config/nvim/lua/
+.config/nvim/plugin/
